# AitoCoder-RedNote

./: .env.example  .gitignore  README.md  inputs.json  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: Aito-ci.yml
agent/: __init__.py  agent.py  content_generator.py  image_generator.py  kimi_client.py  state.py
src/: agent.py  app.py  content_generator.py  cover_generator.py  image_generator.py  kimi_client.py  llm_client.py  processor.py  state.py
src/core/: agent.py
src/services/: content_generator.py  cover_generator.py  image_generator.py  llm_client.py
快乐逐梦小搭档-作品提交物料清单/: 代码仓库.txt
